# superset-dbt-demo

./: .gitignore  README.md  pyproject.toml
dbt_jaffle_shop/: README.md  dbt_project.yml  packages.yml  profiles.yml  push_descriptions.py  sync.py
dbt_jaffle_shop/models/: exposures.yml
dbt_jaffle_shop/models/marts/: average_order_amount.yml  average_order_amount_daily.sql  example_develop_metric.sql  expenses.yml  expenses_daily.sql  orders.yml  profit.yml  profit_daily.sql
dbt_jaffle_shop/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
helm/: superset-values.yaml
